added DONT_PICK_UP and fixed joint movement param

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -18,6 +18,7 @@ SUCCESS_ANGLE_DIST: 0.0872665
 CENTER_TOLERANCE: 0.25
 OBJECT_LOCK_ON_NEEDED: 2
 TARGET_OBJ_ID: 3
+DONT_PICK_UP: False
 
 # Place env
 EE_GRIPPER_OFFSET: [0.2, 0.0, 0.05]
@@ -29,7 +30,7 @@ MAX_LIN_VEL: 0.5  # m/s
 MAX_ANG_VEL: 0.523599  # 30 degrees/s, in radians
 
 # Arm action params
-MAX_JOINT_MOVEMENT: 0.0698132
+MAX_JOINT_MOVEMENT: 0.0872665
 INITIAL_ARM_JOINT_ANGLES: [0, -170, 120, 0, 75, 0]
 ARM_LOWER_LIMITS: [-45, -180, 0, 0, -90, 0]
 ARM_UPPER_LIMITS: [45, -45, 180, 0, 90, 0]
