--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,7 +1,7 @@
 WEIGHTS:
   NAV: "weights/CUTOUT_WT_True_SD_200_ckpt.99.pvp.pth"
-  GAZE: "weights/speed_seed1_speed0.0872665_1648513272.ckpt.19.pth"
-  PLACE: "weights/rel_place_energy_manual_seed10_ckpt.49.pth"
+  GAZE: "weights/closer_seed2_speed0.0872665_1648513206.ckpt.14.pth"
+  PLACE: "weights/speed_sweep_seed2_speed0.174533_1648669786.ckpt.94.pth"
   MRCNN: "weights/model_0007499.pth"
 
 DEVICE: "cuda:0"
@@ -30,7 +30,8 @@ MAX_LIN_VEL: 0.5  # m/s
 MAX_ANG_VEL: 0.523599  # 30 degrees/s, in radians
 
 # Arm action params
-MAX_JOINT_MOVEMENT: 0.0872665
+MAX_JOINT_MOVEMENT: 0.0872665  # Gaze arm speed (5 deg)
+MAX_JOINT_MOVEMENT_2: 0.174533  # Place arm speed (6 deg)
 INITIAL_ARM_JOINT_ANGLES: [0, -170, 120, 0, 75, 0]
 ARM_LOWER_LIMITS: [-45, -180, 0, 0, -90, 0]
 ARM_UPPER_LIMITS: [45, -45, 180, 0, 90, 0]
