--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -4,10 +4,13 @@ WEIGHTS:
   PLACE: "weights/speed_sweep_seed2_speed0.174533_1648669786.ckpt.94.pth"
   MIXER: "weights/sweep_9_RT_False_WC_0_NS_128_SD_300_1650155660_ckpt_12.pth"
   MRCNN: "weights/ikea_apricot_output_model_0087499.pth"
-  DEBLURGAN: "weights/fpn_mobilenet.h5"
+  MRCNN_50: "weights/ikea_apricot_r50_normal_100_output_model_0003599.pth"
+  DEBLURGAN: "weights/fpn_inception.h5"
+#  DEBLURGAN: "weights/fpn_mobilenet.h5"
 
 DEVICE: "cuda:0"
 USE_REMOTE_SPOT: False
+PARALLEL_INFERENCE_MODE: True
 
 # General env params
 CTRL_HZ: 2.0
@@ -17,6 +20,7 @@ MAX_EPISODE_STEPS: 100
 SUCCESS_DISTANCE: 0.3
 SUCCESS_ANGLE_DIST: 5
 DISABLE_OBSTACLE_AVOIDANCE: True
+USE_HEAD_CAMERA: True
 
 # Gaze env
 CENTER_TOLERANCE: 0.3
@@ -44,6 +48,8 @@ ACTUALLY_MOVE_ARM: True
 
 # Mask RCNN
 GRAYSCALE_MASK_RCNN: True
+USE_MRCNN: True
+USE_FPN_R50: False
 USE_DEBLURGAN: True
 IMAGE_SCALE: 1.0
 # After this many time steps of not seeing the current target object, we become open to looking for new ones
