--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -3,7 +3,8 @@ WEIGHTS:
   GAZE: "weights/gaze_normal_32_seed300_1649708927_ckpt.49.pth"
   PLACE: "weights/speed_sweep_seed2_speed0.174533_1648669786.ckpt.94.pth"
   MIXER: "weights/sweep_9_RT_False_WC_0_NS_128_SD_300_1650155660_ckpt_12.pth"
-  MRCNN: "weights/ikea_apricot_output_model_0087499.pth"
+#  MRCNN: "weights/ikea_apricot_output_model_0087499.pth"
+  MRCNN: "weights/ikea_apricot_large_only_model_0002999.pth"
   MRCNN_50: "weights/ikea_apricot_r50_normal_100_output_model_0003599.pth"
   DEBLURGAN: "weights/fpn_inception.h5"
 #  DEBLURGAN: "weights/fpn_mobilenet.h5"
