--- a/configs/ros_topic_names.yaml
+++ b/configs/ros_topic_names.yaml
@@ -9,6 +9,7 @@ FILTERED_HAND_DEPTH: "/filtered_hand_depth"
 
 MASK_RCNN_VIZ_TOPIC: "/mask_rcnn_visualizations"
 DETECTIONS_TOPIC: "/mask_rcnn_detections"
+IMAGE_SCALE: "/image_scale"
 
 ROBOT_STATE: "/robot_state"
 TEXT_TO_SPEECH: "/text_to_speech"
