--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -40,7 +40,8 @@ MAX_ANG_DIST: 15.0  # degrees
 MAX_JOINT_MOVEMENT: 0.0872665  # Gaze arm speed (5 deg)
 MAX_JOINT_MOVEMENT_2: 0.174533  # Place arm speed (6 deg)
 #INITIAL_ARM_JOINT_ANGLES: [0, -170, 120, 0, 75, 0]
-INITIAL_ARM_JOINT_ANGLES: [0, -160, 120, 0, 65, 0]
+#INITIAL_ARM_JOINT_ANGLES: [0, -155, 135, 0, 55, 0]
+INITIAL_ARM_JOINT_ANGLES: [0, -160, 100, 0, 90, 0]
 ARM_LOWER_LIMITS: [-45, -180, 0, 0, -90, 0]
 ARM_UPPER_LIMITS: [45, -45, 180, 0, 90, 0]
 JOINT_BLACKLIST: [3, 5] # joints we can't control "arm0.el0", "arm0.wr1"
