added stand and obstacle avoidance for nav

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -20,6 +20,7 @@ MAX_EPISODE_STEPS: 100
 SUCCESS_DISTANCE: 0.3
 SUCCESS_ANGLE_DIST: 5
 DISABLE_OBSTACLE_AVOIDANCE: True
+DISABLE_OA_FOR_NAV: True
 USE_HEAD_CAMERA: True
 
 # Gaze env
