mask-rcnn is toggle-able, fix to open gripper for DONT PICK UP, checking for object in gripper after arm retraction,

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -28,6 +28,7 @@ OBJECT_LOCK_ON_NEEDED: 3
 TARGET_OBJ_NAME: "rubiks_cube"
 DONT_PICK_UP: False
 ASSERT_CENTERING: True
+MAX_GRASP_DISTANCE: 0.7
 
 # Place env
 EE_GRIPPER_OFFSET: [0.2, 0.0, 0.05]
