--- a/configs/ros_topic_names.yaml
+++ b/configs/ros_topic_names.yaml
@@ -7,7 +7,7 @@ COMPRESSED_IMAGES: "/compressed_images"
 FILTERED_HEAD_DEPTH: "/filtered_head_depth"
 FILTERED_HAND_DEPTH: "/filtered_hand_depth"
 
-MASK_RCNN_VIZ_TOPIC: "/mask_rcnn_visualizations"
+OBJECT_DETECTION_VIZ_TOPIC: "/mask_rcnn_visualizations"
 DETECTIONS_TOPIC: "/mask_rcnn_detections"
 IMAGE_SCALE: "/image_scale"
 
